antsurance/force-app/main/default/objects/Antsurance_Coverage_Agent__c/Antsurance_Coverage_Agent__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Where the claims coverage agent lives on Claude Managed Agents: the ids of the agent, its environment and its skill, written once by AntsuranceCoverageAgentSetup.run(). The ids are not secrets; the API key stays in the Anthropic external credential. Empty means the agent is not set up, and the claim page hides it.</description>
    <label>Antsurance Coverage Agent</label>
</CustomObject>