antsurance/force-app/main/default/objects/Antsurance_Coverage_Agent__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>The id of the claims coverage agent on Claude Managed Agents, set by the setup step.</description>
    <label>Agent Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>