antsurance/force-app/main/default/objects/Antsurance_Coverage_Agent__c/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <description>The id of the environment the agent's sessions run in, set by the setup step.</description>
    <label>Environment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>