antsurance/force-app/main/default/objects/Antsurance_Coverage_Agent__c/fields/Session_Budget_Cents__c.field-meta.xml
<CustomField>
    <fullName>Session_Budget_Cents__c</fullName>
    <description>The most one investigation may spend, in cents at list price. The platform pauses the session at this figure. Empty uses the built-in figure.</description>
    <label>Session Budget (cents)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>