antsurance/force-app/main/default/objects/Antsurance_Coverage_Agent__c/fields/Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>Skill_Id__c</fullName>
    <description>The id of the antsurance-coverage skill attached to the agent, set by the setup step.</description>
    <label>Skill Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>